feat: aggregate device's last record
